# VkWrapperExamples

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  main.cpp  shadow.frag  shadow.vert  triangle.frag  triangle.vert  triangle_color.frag
cmake/: compile_shaders.cmake
source/: AssetImport.cpp  AssetImport.h  CMakeLists.txt  Camera.cpp  Camera.h  CubeGeometry.cpp  CubeGeometry.h  GUI.cpp  GUI.h  PipelineImpls.cpp  PipelineImpls.h  RenderPassesImpl.cpp  RenderPassesImpl.h  SceneProjector.cpp  SceneProjector.h  SwapChainImpl.cpp  SwapChainImpl.h  Window.cpp  Window.h
source/common/: AssetImport.cpp  AssetPath.inc.in  CMakeLists.txt  Camera.cpp  Camera.h  CommonApp.cpp  CommonApp.h  ErrorCallbackWrapper.h  GUI.cpp  GUI.h  GlobalLayout.cpp  GlobalLayout.h  Model.cpp  Model.h  RenderPassesImpl.cpp  RenderPassesImpl.h  SceneProjector.cpp  SceneProjector.h  ShadowPass.cpp  ShadowPass.h  SkyBox.cpp  SkyBox.h  SwapChainImpl.cpp  SwapChainImpl.h  Utils.cpp  Utils.h  VulkanMemoryMonitor.cpp  VulkanMemoryMonitor.h  Window.cpp  Window.h  stbi_impl.cpp
source/common/RenderEngine/: CMakeLists.txt  Context.cpp  Context.h  RecordingState.cpp  RecordingState.h
source/common/RenderEngine/AssetImport/: AssetImport.cpp  AssetImport.h
source/common/RenderEngine/Pipelines/: Compute.cpp  Compute.h  Geometry.cpp  Geometry.h  Lighting.cpp  Lighting.h  Material.cpp  Material.h  PipelinePool.cpp  PipelinePool.h  PipelineStage.cpp  PipelineStage.h  Projection.cpp  Projection.h  ShaderLoaderInterface.h
source/common/RenderEngine/RenderPassGraph/: RenderPass.cpp  RenderPass.h
source/common/RenderEngine/Shaders/: ShaderLoader.cpp  ShaderLoader.h
source/common/RenderEngine/Window/: Boxer.cpp  Boxer.h  CMakeLists.txt  Window.cpp  Window.h
source/examples/cubes/: CubeGeometry.cpp  CubeGeometry.h  main.cpp
source/examples/fractal/: Fractal.cpp  Fractal.h  main.cpp
source/examples/model/: main.cpp
source/examples/planet/: Atmosphere.cpp  Atmosphere.hpp  BumpMap.cpp  BumpMap.hpp  Planet.cpp  Planet.hpp  PlanetCamera.cpp  PlanetCamera.hpp  PlanetSceneWindow.cpp  PlanetSceneWindow.hpp  SphereMesh.cpp  SphereMesh.hpp  SunLight.cpp  SunLight.hpp  main.cpp
source/examples/waves/: GlobalLayout.cpp  GlobalLayout.h  Grid.cpp  Grid.h  LandSurface.cpp  LandSurface.h  Precompute.cpp  Precompute.h  ShadowPass.cpp  ShadowPass.h  SkyBox.cpp  SkyBox.h  WaterSurface.cpp  WaterSurface.h  main.cpp
source/shaders/: GeomProjInterface.h.glsl  MaterialLightingInterface.h.glsl  atmosphere_outscatter.comp  atmosphere_outscatter2.comp  colorDepth.lt.frag  combine_water_texture.comp  cube.gm.vert  depthFilter.mt.frag  directLight.lt.frag  dynamic_spectrum.comp  fft.comp  fft_column.comp  fft_row.comp  flat.lt.frag  flat.mt.frag  flat.pr.vert  flat_sunlight.frag  fractal.mt.frag  general.frag  general.vert  generate_bump_map.comp  land.gm.vert  land.mt.frag  model.frag  model.gm.vert  model.vert  model_perspective.vert  null.mt.frag  pbr.mt.frag  pbr_sunlight.frag  permute_column.comp  permute_row.comp  perspective.pr.vert  planet.gm.vert  planet_surface.mt.frag  scattering_emissive.lt.frag  scattering_emissive.mt.frag  scattering_emissive.pr.vert  scattering_transparent.lt.frag  scattering_transparent.mt.frag  (+27 more)
